Loses first packets in live pipelines
Can be reproduced with
./test-launch "( videotestsrc is-live=true ! timeoverlay ! x264enc ! rtph264pay name=pay0 pt=96 )"
The initial keyframe is lost, for me the first two buffer lists are lost. Happens with UDP and TCP clients. Changing is-live=false
makes it work reliable. This is at least the case since 1.14.0 so it's unclear to me why nobody reported this before :)
Reason for this is that in the PLAY
handling, first the blocking pad probes on the rtpbin source pads are removed and only then the transports are set up. multiudpsink
conveniently complains about "no clients" for the first two buffer lists and simply discards the data.